[build-system]
requires = ["scikit-build-core>=0.9.3", "bsk-sdk>=1.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "bsk-plugin-example"
version = "0.1.0"
description = "Example Basilisk plugin project structure."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "ISC" }
authors = [{ name = "Basilisk Developers" }]
dependencies = ["bsk"]

[project.entry-points."basilisk.plugins"]
example = "bsk_example_plugin.register:register"

[tool.scikit-build]
wheel.py-api = "cp38"

[tool.scikit-build.cmake]
version = ">=3.18"

[tool.scikit-build.install]
components = ["python", "extensions"]
