[package]
name    = "bsk-build"
version = "0.1.0"
edition = "2021"
description = "Build-script helpers for Basilisk Rust modules — generates C headers and BSK lifecycle shims from #[repr(C)] config structs."

[features]
# The codegen surface (`generate()`, called from build.rs) needs `syn`/
# `walkdir`; the `bsk_module!()` macro (called from the crate's own regular
# code, so bsk-build is also a plain `[dependencies]` entry — see the crate
# docs) does not. Opt-in (no `default` feature) so the common case — a
# module's plain `[dependencies]` entry for the macro — doesn't need to
# disable anything; only the `[build-dependencies]` entry (which needs
# `generate()`) turns it on explicitly.
codegen = ["dep:syn", "dep:walkdir"]

# Enable this in a module crate's [dev-dependencies] to make `bskLogger`
# calls (info/warning/bsk_error) print to stderr / panic instead of calling
# Basilisk's C symbols, which aren't linked during `cargo test`.
#
# [dev-dependencies]
# bsk-build = { path = "...", features = ["test_logger"] }
#
# Cargo feature unification ensures the test binary gets this feature while
# production builds do not (dev-dep features are not propagated into the
# crate's public library artifact). After adding this, module code can call
# `self.bskLogger.warning(...)` without `#[cfg(not(test))]` guards.
# `bsk_module!()` must still be gated with `#[cfg(not(test))]` because the
# generated shim references Basilisk's message-port C symbols.
test_logger = []

[dependencies]
# syn: proper Rust AST parser (same technology cbindgen uses internally).
# Used to find the *Config struct in any .rs file under src/, read its
# fields and doc-comments, and produce the C header + shim.
syn  = { version = "2", features = ["full", "extra-traits"], optional = true }
# walkdir: portable recursive directory scan to find *.rs source files.
walkdir = { version = "2", optional = true }
