[package]
name = "rustModuleTemplate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
bsk-messages = { path = "../../../rust/bsk_messages" }
bsk-build = { path = "../../../rust/bsk_build" }

[build-dependencies]
bsk-build = { path = "../../../rust/bsk_build", features = ["codegen"] }
